# stackstitch

./: CLAUDE.md  docker-compose.yml
core/: .gitignore  Dockerfile  README.md  pyproject.toml
core/.planning/debug/: knowledge-base.md
core/.planning/debug/resolved/: invocation-orchestration-design.md
core/src/core/application/ports/: __init__.py  agent.py  event_publisher.py  investigator.py  message_deliverer.py  metric_monitor.py  metrics_calculator.py  repositories.py
core/src/core/application/use_cases/: __init__.py  handle_message.py  ingest_stream_data.py  monitor_metric.py  orchestrate.py  process_stream_data_point.py  process_stream_update.py  run_investigation.py
core/src/core/domain/: enums.py  exceptions.py
core/src/core/domain/entities/: __init__.py  insight.py  investigation.py  invocation.py  metric.py  stream.py  thread.py
core/tests/: conftest.py  test_fakes.py
core/tests/domain/: test_entities.py  test_events.py  test_exceptions.py
core/tests/fakes/: __init__.py  agent.py  event_publisher.py  investigator.py  message_deliverer.py  metric_monitor.py  metrics_calculator.py  repositories.py
core/tests/integration/: conftest.py  test_health.py  test_insight_repository.py  test_investigation_repository.py  test_invocation_repository.py  test_metric_repository.py  test_stream_repository.py  test_thread_repository.py
core/tests/use_cases/: test_handle_message.py  test_ingest_stream_data.py  test_monitor_metric.py  test_orchestrate.py  test_process_stream_data_point.py  test_process_stream_update.py  test_run_investigation.py
(+49 files in other folders)
