[project]
name = "stackstitch-core"
version = "0.1.0"
description = "Core domain layer for StackStitch - AI operational intelligence engine"
readme = "README.md"
authors = [
    { name = "Jorge Andres Diaz", email = "jodiaz@somniosoftware.com" }
]
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.12,<3",
    "pymongo>=4.16,<5",
    "fastapi>=0.115,<1",
    "uvicorn>=0.32,<1",
    "pydantic-settings>=2.7,<3",
]

[dependency-groups]
dev = [
    "pytest>=9.0,<10",
    "pytest-asyncio>=0.24,<2",
    "pytest-cov>=6.0,<7",
    "ruff>=0.15,<1",
    "mypy>=1.20,<2",
    "testcontainers[mongodb]>=4.14,<5",
    "httpx>=0.28,<1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/core"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "TCH"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
